--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorPrimaryDark">#B2212121</color>
     <color name="colorAccent">#008f24</color>
     <color name="color_loght_gray">#C4C4C4C4</color>
+    <color name="toolbar_color_control_normal">#000000</color>
 </resources>
